[package]
name = "cyclo"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cyclo"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
# parsing
walkdir = "2.3.2"
tokei = "12.1.2"
snafu = "0.7.1"
